— Add: ConsoleAsserts (jcolor-based): assertContainsAllOrThrow, assertEqualsOrThrow